k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: contrast-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: contrast-mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contrast-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contrast-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: contrast-mysql
    spec:
      containers:
        - name: contrast-mysql
          image: mysql:8.0.30
          args: ["--log-bin-trust-function-creators=ON"]
          ports:
            - containerPort: 3306
              name: contrast-mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 1.0
              memory: 1Gi
            limits:
              cpu: 2.0
              memory: 2Gi
      volumes:
        - name: mysql-cnf-volume
          configMap:
            name: contrast-mysql-cnf
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: contrast-mysql-pv-claim
